@@ -1055,13 +1055,13 @@
         </profile>
 
         <profile>
-            <id>java-9</id>
+            <id>java-9+</id>
             <activation>
                 <jdk>[1.9,)</jdk>
             </activation>
             <properties>
-                <maven.compiler.source>9</maven.compiler.source>
-                <maven.compiler.target>9</maven.compiler.target>
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>11</maven.compiler.target>
                 <scala.library.version>2.12.6</scala.library.version>
             </properties>
             <dependencies/>
@@ -1082,6 +1082,14 @@
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
                             </compilerArgs>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --illegal-access=permit</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
